examples/mood/tests/evaluate/two_too_many_arguments.mood.expected
-----------------
INPUT
----------------- 
fn sum(a: f64, b: f64): f64 {
    a + b
}

pub fn test(): f64 {
    sum(1_f64, 2_f64, 3_f64, 4_f64)
}
-----------------
OUTPUT
-----------------
Error: Too many arguments. Expected 2 but found 4.:
 --> two_too_many_arguments.mood:6:23

  | pub fn test(): f64 {
6 |     sum(1_f64, 2_f64, 3_f64, 4_f64)
  |                       ^^^^^^^^^^^^ These arguments are not accepted by "sum".
  | }
